package com.lft.intercepting.filter;

public interface Filter {
	void execute(String request);
}